--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=4321
-spring.datasource.url=jdbc:mysql://localhost:3308/modocripto
-spring.datasource.username=criptoproj
-spring.datasource.password=cr1pP@ss21
+spring.datasource.url=jdbc:mysql://localhost:3306/modocripto
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
